--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,13 @@ body {
 img {
   display: none;
 }
+
+select {
+  position: absolute;
+  top: 5%;
+  left: 50%;
+  width: 600px;
+  transform: translate(-50%, -5%);
+  padding: 8px;
+  font-size: 1.5em;
+}
